# client-fs

./: Dockerfile  LICENSE  README.md  client-fs.cabal  push_docker_lizardfs.sh  push_dockerhub.sh  run.sh  stack.yaml
app/: Main.hs
docker-lizardfs/admin/: Dockerfile  docker_commands.sh
docker-lizardfs/cgi/: Dockerfile  docker_commands.sh
docker-lizardfs/chunkserver/: Dockerfile  docker_commands.sh
docker-lizardfs/master/: Dockerfile  docker_commands.sh  run.sh
docker-lizardfs/metalogger/: Dockerfile  docker_commands.sh
docker-lizardfs/shadow/: Dockerfile  docker_commands.sh
scripts/: docker_commands.sh  run.sh
src/: FileManager.hs
